--- a/resources/css/style_page.css
+++ b/resources/css/style_page.css
@@ -116,7 +116,7 @@ footer h2 {
 
 /* Media Query */
 
-@media screen and (max-width: 900px) {
+@media only screen and (max-width: 900px) {
 
   div#content {
     padding: 3rem 2.5rem;
@@ -127,7 +127,7 @@ footer h2 {
   }
 }
 
-@media screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
 
   html {
     font-size: 12px;
