--- a/resources/css/style_page.css
+++ b/resources/css/style_page.css
@@ -13,7 +13,7 @@ h1, h2, h3, li {
 
 h1 {
   font-size: 2rem;
-  margin-right: 6rem;
+  padding-right: 6rem;
 }
 
 p, span  {
@@ -34,7 +34,7 @@ a {
 
 header {
   width: 100%;
-  padding: 2rem 3rem;
+  padding: 2rem 0 2rem 3rem;
   display: flex;
 }
 
@@ -72,14 +72,14 @@ nav a:visited {
 
 div#content {
   width: 100%;
-  padding: 3rem 5rem;
+  padding: 3rem 0 3rem 5rem;
 }
 
 /* Description Section */
 
 .description p {
   margin-top: 2rem;
-  margin-right: 10rem;
+  padding-right: 10rem;
 }
 
 /* Artwork Section */
@@ -96,7 +96,7 @@ div.gallery {
 /* Footer Section */
 
 footer {
-  padding: 3rem 5rem;
+  padding: 3rem 0 3rem 5rem;
 }
 
 #social {
@@ -123,7 +123,7 @@ footer h2 {
   }
 
   .description p {
-    margin-right: 7rem;
+    padding-right: 7rem;
   }
 }
 
@@ -142,7 +142,7 @@ footer h2 {
   }
 
   .description p {
-    margin-right: 6rem;
+    padding-right: 6rem;
   }
 
   #social img {
