--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,7 +20,7 @@ p, span  {
 
 header {
   width: 100%;
-  padding: 2rem 0 2rem 3rem;
+  padding: 2rem 3rem;
   display: flex;
 }
 
@@ -54,13 +54,14 @@ nav a:hover {
 
 div#content {
   width: 100%;
-  padding: 3rem 0 3rem 5rem;
+  padding: 3rem 5rem;
 }
 
 /* Artwork Section */
 
 div.gallery {
   display: flex;
+  padding-right: 5rem;
   flex-wrap: wrap;
 }
 
@@ -76,7 +77,7 @@ div.thumbnail {
 /* Footer Section */
 
 footer {
-  padding: 3rem 0 3rem 5rem;
+  padding: 3rem 5rem;
 }
 
 #social {
