--- a/resources/css/style_page.css
+++ b/resources/css/style_page.css
@@ -13,7 +13,7 @@ h1, h2, h3, li {
 
 h1 {
   font-size: 2rem;
-  padding-right: 6rem;
+  line-height: 1.2;
 }
 
 p, span  {
@@ -27,14 +27,17 @@ p, footer {
 
 a {
   text-decoration: none;
+  color: #4C4C4C;
+}
+
+a:hover {
   color: #70C7B5;
 }
 
 /* Header Section */
 
 header {
-  width: 100%;
-  padding: 2rem 3rem;
+  padding: 2rem 5rem;
   display: flex;
 }
 
@@ -47,7 +50,7 @@ nav {
   align-items: flex-end;
   padding-bottom: .75rem;
   position: relative;
-  right: 3rem;
+  right: 1.5rem;
 }
 
 nav li {
@@ -55,22 +58,20 @@ nav li {
   font-size: 1.15rem;
 }
 
-nav a:hover {
-  color: #70C7B5;
-}
-
 /* Content Container */
 
-div#content {
-  width: 100%;
-  padding: 3rem 5rem;
+div.content {
+  padding-left: 5rem;
+  margin-top: 3rem;
 }
 
 /* Description Section */
 
+div.description {
+  width: 90%;
+}
 .description p {
   margin-top: 2rem;
-  padding-right: 10rem;
 }
 
 /* Artwork Section */
@@ -81,7 +82,9 @@ div.gallery {
 
 .gallery img {
   width: 85%;
-  max-width: 1200px;
+  max-width: 1100px;
+  display: block;
+  margin: auto;
 }
 
 /* Footer Section */
@@ -109,13 +112,18 @@ footer h2 {
 
 @media only screen and (min-width: 501px) and (max-width: 900px) {
 
-  div#content {
-    padding: 3rem 2.5rem;
+  header {
+    padding: 2rem 3rem;
   }
 
-  .description p {
-    padding-right: 7rem;
+  div.content {
+    padding-left: 3rem;
   }
+
+  footer {
+    padding: 3rem;
+  }
+
 }
 
 @media only screen and (min-width: 250px) and (max-width: 500px) {
@@ -125,15 +133,15 @@ footer h2 {
   }
 
   header {
-    padding: 2rem 1.5rem;
-  }
-
-  div#content {
     padding: 2rem;
   }
 
-  .description p {
-    padding-right: 6rem;
+  div.content {
+    padding-left: 2rem;
+  }
+
+  footer {
+    padding: 2rem;
   }
 
   #social img {
