--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -96,6 +96,10 @@ footer h2 {
   font-size: 1.25rem;
 }
 
+#social a:hover {
+  opacity: .7;
+}
+
 /* Media Query */
 
 @media only screen and (min-width: 601px) and (max-width: 900px){
