--- a/resources/css/style_page.css
+++ b/resources/css/style_page.css
@@ -109,6 +109,10 @@ footer h2 {
   font-size: 1.25rem;
 }
 
+#social a:hover {
+  opacity: .7;
+}
+
 /* Media Query */
 
 @media only screen and (min-width: 501px) and (max-width: 900px) {
