--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -28,6 +28,10 @@ a:hover {
   color: #70C7B5;
 }
 
+div.cover-title {
+  margin: auto;
+}
+
 /* Header Section */
 
 header {
@@ -75,6 +79,20 @@ div.thumbnail {
   width: 100%;
 }
 
+a.cover {
+  opacity: .8;
+}
+
+a.cover:hover {
+  opacity: 1;
+}
+
+.cover_title h3 {
+  font-size: 1rem;
+  padding-left: 1rem;
+  color: #70C7B5;
+}
+
 /* Footer Section */
 
 footer {
@@ -96,13 +114,17 @@ footer h2 {
   font-size: 1.25rem;
 }
 
+#social a {
+  opacity: .8;
+}
+
 #social a:hover {
-  opacity: .7;
+  opacity: 1;
 }
 
 /* Media Query */
 
-@media only screen and (min-width: 601px) and (max-width: 900px){
+@media only screen and (min-width: 501px) and (max-width: 900px){
 
   header {
     padding: 2rem 3rem;
@@ -121,7 +143,7 @@ footer h2 {
   }
 }
 
-@media only screen and (min-width: 250px) and (max-width: 600px) {
+@media only screen and (min-width: 250px) and (max-width: 500px) {
 
   html {
     font-size: 12px;
